--- a/src/maptool.html
+++ b/src/maptool.html
@@ -1,37 +1,70 @@
 <html>
-  <head>
-    <script src="https://unpkg.com/@panzoom/panzoom@4.4.4/dist/panzoom.min.js"></script>
-    <script src="js/pako-inflate-2.0.4.min.js"></script>
-    <script src="data/tilecolormap.js"></script>
-    <script src="js/maploader.js"></script>
-    <script src="js/canvastools.js"></script>
-  </head>
-  <body>
-    <div>
-      <p>Core Keeper Map Tool -- Created by Mz, nineforty, and Craigins</p>
-    </div>
-    <div>
-      Open the folder: c:\users\%USERNAME%\AppData\LocalLow\Pugstorm\Core Keeper\Steam\ <br/>
-      double click on your steam id folder, then on the maps folder.<br/>
-      Select your world folder number<br/>
-      Then pick one of the #.mapparts.gzip files to display <br/>
 
-      <input id="mapupload" type="file"/> <input id="savemap" type="button" value = "Download Map"/> <select id="highlighttype" onchange="redrawMap();"></select>
-    </div>
-    <div>
-      <input type="button" value="+" onclick="changeZoom(0.1);" /><input type="button" value="-" onclick="changeZoom(-0.1);" />
-    </div>
-    <div>
-      <input type="button" value="<" onclick="panImage(-10,0);" /><input type="button" value=">" onclick="panImage(10,0);" />
-      <input type="button" value="^" onclick="panImage(0,-10);" /><input type="button" value="V" onclick="panImage(0,10);" />
-      <input type="checkbox" id="bosscircle"/> Show Bosses
-    </div>
-    <div>
-      <canvas id="mapcanvas" width="1200px" height="800px" style="image-rendering: pixelated;" onclick="//toclick">
-    </div>
-    <script src="js/page.js"></script>
-    <script>
-      
-    </script>
-  </body>
+<head>
+  <link href="css/vendor/bootstrap.css" rel="stylesheet">
+  <link href="css/vendor/bootstrap-responsive.css" rel="stylesheet">
+  <link href="css/app.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"
+    integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+  <script src="js/vendor/jqueryBrowser.js"></script>
+  <script src="https://unpkg.com/@panzoom/panzoom@4.4.4/dist/panzoom.min.js"></script>
+  <script src="js/pako-inflate-2.0.4.min.js"></script>
+  <script src="data/tilecolormap.js"></script>
+  <script src="js/maploader.js"></script>
+  <script src="js/canvastools.js"></script>
+  <script src="https://kit.fontawesome.com/75173a9880.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div>
+    <p>Core Keeper Map Tool -- Created by Mz, nineforty, and Craigins</p>
+  </div>
+  <div>
+    Open the folder: c:\users\%USERNAME%\AppData\LocalLow\Pugstorm\Core Keeper\Steam\ <br />
+    double click on your steam id folder, then on the maps folder.<br />
+    Select your world folder number<br />
+    Then pick one of the #.mapparts.gzip files to display <br />
+
+    <input id="mapupload" type="file" /> 
+    <select id="highlighttype" onchange="redrawMap();"></select>
+  </div>
+  <div>
+    <ul class="nav nav-pills movement-nav">
+      <li><a href="#" onclick="changeZoom(0.1);"><i class="fas fa-search-plus"></i></a></li>
+      <li><a href="#" onclick="changeZoom(-0.1);"><i class="fas fa-search-minus"></i></a></li>
+      <li><a href="#" onclick="panImage(-10,0);"><i class="fas fa-arrow-left"></i></a></li>
+      <li><a href="#" onclick="panImage(10,0);"><i class="fas fa-arrow-right"></i></a></li>
+      <li><a href="#" onclick="panImage(0,-10);"><i class="fas fa-arrow-up"></i></a></li>
+      <li><a href="#" onclick="panImage(0,10);"><i class="fas fa-arrow-down"></i></a></li>
+      <li id="bosscircle"><a href="#" onclick="toggleBosses();">Show Bosses</i></a></li>
+      <li><a href="#" onclick="downloadMap(document.getElementById('mapcanvas'));"><i class="fas fa-download"></i> Download Map</a></li>
+    </ul>
+  </div>
+  <div>
+    
+    <ul id="tilefilter" class="nav nav-pills">
+      <li><label class="highlight-label">Filter Tiles</label></li>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+          Dropdown
+          <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li>Item 1</li>
+          <li>Item 2</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+  <div>
+    <canvas id="mapcanvas" width="1200px" height="800px" style="image-rendering: pixelated;" onclick="//toclick">
+  </div>
+  <script src="js/page.js"></script>
+  <script src="js/vendor/bootstrap.js"></script>
+
+  <script>
+
+  </script>
+</body>
+
 </html>
