Typos and cleanup
Fixed a typo in tile type json

disabled zoom animation, and prevent scrolling on parent div for canvas.

--- a/src/maptool.html
+++ b/src/maptool.html
@@ -58,7 +58,7 @@
       </ul>
     </div>
   </div>
-  <div>
+  <div class="canvas-container">
     <canvas id="mapcanvas" width="1200px" height="800px" style="image-rendering: pixelated;" onclick="//toclick">
   </div>
   <script src="js/page.js"></script>
