start capability for finding gaps where mazes could hide

--- a/src/maptool.html
+++ b/src/maptool.html
@@ -47,6 +47,7 @@
         <li><a href="#" onclick="panImage(0,-10);"><i class="fas fa-arrow-up"></i></a></li>
         <li><a href="#" onclick="panImage(0,10);"><i class="fas fa-arrow-down"></i></a></li>
         <li id="bosscircle"><a href="#" onclick="toggleBosses();">Show Bosses</i></a></li>
+        <li id="mazeholes"><a href="#" onclick="findMazes();">Find Mazes Holes</i></a></li>
         <li><a href="#" onclick="downloadMap(document.getElementById('mapcanvas'));"><i class="fas fa-download"></i>
             Download Map</a></li>
       </ul>
@@ -63,6 +64,7 @@
   </div>
   <script src="js/page.js"></script>
   <script src="js/menubuilder.js"></script>
+  <script src="js/mazehunter.js"></script>
   <script src="js/vendor/bootstrap.js"></script>
 
   <script>
