--- a/src/maptool.html
+++ b/src/maptool.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+  <meta charset="utf8" />
+  <title>Map Tool</title>
   <link href="css/vendor/bootstrap.css" rel="stylesheet">
   <link href="css/vendor/bootstrap-responsive.css" rel="stylesheet">
   <link href="css/app.css" rel="stylesheet">
@@ -39,9 +41,9 @@
     </div>
     <div>
       <ul class="nav nav-pills movement-nav">
-        <li><a href="#" onclick="changeZoom(0.1);"><i class="fas fa-search-plus"></i></a></li>
+        <li><a href="#" onclick="changeZoom(1);"><i class="fas fa-search-plus"></i></a></li>
         <li><input style="margin-top: 8px;width: 30px;" type="text" id="zoomval" value="1.0" /></li>
-        <li><a href="#" onclick="changeZoom(-0.1);"><i class="fas fa-search-minus"></i></a></li>
+        <li><a href="#" onclick="changeZoom(-1);"><i class="fas fa-search-minus"></i></a></li>
         <li><a href="#" onclick="panImage(-10,0);"><i class="fas fa-arrow-left"></i></a></li>
         <li><a href="#" onclick="panImage(10,0);"><i class="fas fa-arrow-right"></i></a></li>
         <li><a href="#" onclick="panImage(0,-10);"><i class="fas fa-arrow-up"></i></a></li>
