--- a/src/maptool.html
+++ b/src/maptool.html
@@ -49,7 +49,7 @@
         <li><a href="#" onclick="panImage(0,-10);"><i class="fas fa-arrow-up"></i></a></li>
         <li><a href="#" onclick="panImage(0,10);"><i class="fas fa-arrow-down"></i></a></li>
         <li id="bosscircle"><a href="#" onclick="toggleBosses();">Show Bosses</i></a></li>
-        <li id="mazeholes"><a href="#" onclick="findMazes();">Find Mazes Holes</i></a></li>
+        <li id="mazeholes"><a href="#" onclick="findMazes();">Find Mazes Gaps</i></a></li>
         <li><a href="#" onclick="downloadMap(document.getElementById('mapcanvas'));"><i class="fas fa-download"></i>
             Download Map</a></li>
       </ul>
@@ -63,6 +63,20 @@
   </div>
   <div class="canvas-container">
     <canvas id="mapcanvas" width="1200px" height="800px" style="image-rendering: pixelated;" onclick="//toclick">
+  </div>
+  <div class="legend-container">
+    <span class="ivy-legend">&nbsp;Ivy</span>
+    <span class="mold-legend">&nbsp;Main Mold Dungeon</span>
+    <span class="azeos-legend">&nbsp;Azeos</span>
+    <span class="malugaz-legend">&nbsp;Malugaz</span>
+    <span class="hive-mother-legend">&nbsp;Hive Mother</span>
+    <span class="ghorm-legend">&nbsp;Ghorm</span>
+    <span class="glurch-legend">&nbsp;Glurch</span><br/>
+    <span style="padding-right: 20px">Maze Gaps: </span>
+    <span class="large-maze-legend">&nbsp;Large</span>
+    <span class="medium-maze-legend">&nbsp;Medium</span>
+    <span class="small-maze-legend">&nbsp;Small</span>
+
   </div>
   <script src="js/page.js"></script>
   <script src="js/menubuilder.js"></script>
