Initial add boulder attempt
Initial logic for detecting boulders.
Fixed some arc calculations for maze detection
added additional help items.

--- a/src/maptool.html
+++ b/src/maptool.html
@@ -32,6 +32,7 @@
             <li>Open the maps folder</li>
             <li>Open your character # folder</li>
             <li>Select one of the #.mapparts.gzip files to display</li>
+            <li>Still confused?  <a href="https://docs.google.com/presentation/d/1Gf8zR5TkG-hpFjnDU9xPqTFHCkGT9_t-xrtDCMUTee4/" target="_blank">Read this</a></li>
           </ol>
         </div>
       </div>
