Add vault location and fix alpha
Added bow vault location

fixed resetting alpha back to 1 after drawing circles.

--- a/src/maptool.html
+++ b/src/maptool.html
@@ -75,6 +75,7 @@
     <span class="omoroth-legend">&nbsp;Omoroth</span>
     <span class="morpha-legend">&nbsp;Morpha</span>
     <span class="bowcity-legend">&nbsp;Bow Cities</span>
+    <span class="bowvault-legend">&nbsp;Bow Vault</span>
     <br/>
     <span class="ivy-legend">&nbsp;Ivy</span>
     <span class="mold-legend">&nbsp;Main Mold Dungeon</span>
