update filter position and add yt link
Updated the filter box to reposition at the bottom of the top nav box, instead of relying on pixel offsets.

Switched more directions to a youtube video.

--- a/src/maptool.html
+++ b/src/maptool.html
@@ -18,13 +18,13 @@
 </head>
 
 <body style="background-color: black">
-  <div class="nav_controls_container">
+  <div id="navdiv" class="nav_controls_container">
     <div>
       <p>Core Keeper Map Tool -- Created by Mz, nineforty, and Craigins</p>
     </div>
     <div>
       <div>
-        <a href="#" onclick="toggleDirections()"><i class="fas fa-question-circle"></i> Click for Directions</a>
+        <a href="#" onclick="toggleDirections()"><h2><i class="fas fa-question-circle"></i> Click for Directions</h2></a>
         <div id="directions" style="display: none">
           <ol>
             <li>Open the folder: c:\users\%USERNAME%\AppData\LocalLow\Pugstorm\Core Keeper\Steam\</li>
@@ -32,7 +32,7 @@
             <li>Open the maps folder</li>
             <li>Open your character # folder</li>
             <li>Select one of the #.mapparts.gzip files to display</li>
-            <li>Still confused?  <a href="https://docs.google.com/presentation/d/1Gf8zR5TkG-hpFjnDU9xPqTFHCkGT9_t-xrtDCMUTee4/" target="_blank">Read this</a></li>
+            <li>Still confused?  <a href="https://www.youtube.com/watch?v=7YZCPm6i50E" target="_blank">Watch this video by Dakon The Mad</a></li>
           </ol>
         </div>
       </div>
