Add github link
Added a link to the github project

--- a/src/maptool.html
+++ b/src/maptool.html
@@ -88,7 +88,8 @@
     <span class="large-maze-legend">&nbsp;Large</span>
     <span class="medium-maze-legend">&nbsp;Medium</span>
     <span class="small-maze-legend">&nbsp;Small</span>
-
+    <br/>
+    <span><a target="_blank" href="https://github.com/craigins/CoreKeeperMapTool/discussions">Feedback / Requests</a></span>
   </div>
   <script src="js/page.js"></script>
   <script src="js/menubuilder.js"></script>
