#11 Tweak Monitor refreshing
Changed map monitor to not refresh while dragging/zooming.

Added a check box to enable/disable the monitor refreshing.

Now only refreshes if the last modified flag of the file is different from the previously loaded map.

--- a/src/maptool.html
+++ b/src/maptool.html
@@ -38,7 +38,10 @@
         </div>
       </div>
       <div>
-        <input id="mapupload" type="file" /><input type="button" onclick="registerMapFile();" value="Monitor Map"/> <div class="toggle-container" onclick="toggleDarkMode();"><label id="darkmodeui" class="toggle-switch">Dark Mode</label></div>
+        <input id="mapupload" type="file" />
+        <input type="checkbox" id="shouldrefresh" checked/>
+        <input type="button" onclick="registerMapFile();" value="Monitor Map"/> 
+        <div class="toggle-container" onclick="toggleDarkMode();"><label id="darkmodeui" class="toggle-switch">Dark Mode</label></div>
       </div>
     </div>
     <div>
