add link to example map
added a link to a fully revealed example map.

--- a/src/maptool.html
+++ b/src/maptool.html
@@ -20,7 +20,7 @@
 <body style="background-color: black">
   <div class="nav_controls_container">
     <div>
-      <p>Core Keeper Map Tool -- Created by Mz, nineforty, and Craigins</p>
+      <p>Core Keeper Map Tool -- Created by Mz, nineforty, and Craigins <a href="img/fullmap_cropped.png" target="_blank">Example Map</a></p>
     </div>
     <div>
       <div>
